# birdbot

./: Dockerfile.local  docker-compose.yml  pyproject.toml
sheepobot/: enums.py  main.py
sheepobot/db/: __init__.py  alias.py  base.py  command.py  connection.py
sheepobot/parsing/: message.py
tests/: test_sheepobot.py
